--- a/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
+++ b/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
@@ -19,16 +19,10 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" th:href=${"/unidad/listar"}>Unidades</a>
+						<a class="nav-link active" aria-current="page" href="#">Unidades</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href=${"/boleto/listar"}>Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
+						<a class="nav-link" th:href=${"/unidad/listar"}>Boletos</a>
 					</li>
 				</ul>
 			</div>
