--- a/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
+++ b/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
@@ -21,13 +21,7 @@
 						<a class="nav-link active" aria-current="page" href="#">Unidades</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href=${"/boleto/listar"}>Boletos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
+						<a class="nav-link" th:href=${"/unidad/listar"}>Boletos</a>
 					</li>
 				</ul>
 			</div>
