--- a/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -43,7 +43,7 @@
 
 			<div class="m-3"></div>
 			<div class="form-group row">
-				<label class="col-form-label col-sm-4">fecha</label>
+				<label class="col-form-label col-sm-4">Fecha</label>
 				<div class="col-sm-8">
 					<input type="date" th:field="*{fecha}" class="form-control" required>
 				</div>
