--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarPersonal.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarPersonal.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title >Cronogramas disponibles</title>
+	<title >Personal disponibles</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -27,7 +27,10 @@
 						<a class="nav-link" th:href=${"/ruta/listar"}>Rutas</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Cronogramas</a>
+						<a class="nav-link" th:href=${"/cronograma/listar"}>Cronogramas</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Personal A.</a>
 					</li>
 				</ul>
 			</div>
@@ -42,29 +45,27 @@
 			<thead>
 				<tr>
 					<th>id</th>
-					<th>descripcion </th>
-					<th>fecha</th>
-					<th>dia</th>
-					<th>mes</th>
-					<th>anio</th>
-					<th>editar</th>
-					<th>eliminar</th>
+					<th>nombre</th>
+					<th>apellido</th>
+					<th>genero</th>
+					<th>fecha ingreso</th>
+					<th>número puesto</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="cronograma: ${cronogramas}">
-					<td th:text="${cronograma.id}"></td>
-					<td th:text="${cronograma.descripcion}"></td>
-					<td th:text="${cronograma.fecha}"></td>
-					<td th:text="${cronograma.dia}"></td>
-					<td th:text="${cronograma.mes}"></td>
-					<td th:text="${cronograma.anio}"></td>
-					<td > <a class="btn btn-secondary btn-xs" th:href="@{/cronograma/form/}+ ${cronograma.id}">editar</a></td>
-					<td > <a class="btn btn-danger btn-xs" th:href="@{/cronograma/eliminar/}+ ${cronograma.id}">eliminar</a></td>
+				<tr th:each="personal: ${personals}">
+					<td th:text="${personal.id}"></td>
+					<td th:text="${personal.nombre}"></td>
+					<td th:text="${personal.apellido}"></td>
+					<td th:text="${personal.genero}"></td>
+					<td th:text="${personal.fechaIngreso}"></td>
+					<td th:text="${personal.nroPuesto}"></td>
+					<td > <a class="btn btn-secondary btn-xs" th:href="@{/personal/form/}+ ${personal.id}">editar</a></td>
+					<td > <a class="btn btn-danger btn-xs" th:href="@{/personal/eliminar/}+ ${personal.id}">eliminar</a></td>
 				</tr>
 			</tbody>
 		</table>
-	<a th:href="@{/cronograma/form}" class="btn btn-secondary">Crear Cronograma</a>
+	<a th:href="@{/personal/form}" class="btn btn-secondary">Crear Personal</a>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
 		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
