Correciones de formularios
Formularios HTML

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -83,7 +83,7 @@
 
 
 			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar cronograma</button>
+				<button type="submit" class="btn btn-primary">Guardar Cronograma</button>
 			</div>
 			<input type="hidden" th:field="*{id}">
 
