--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formPersonal.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formPersonal.html
@@ -82,7 +82,7 @@
 			<div class="m-3"></div>
 
 			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar personal</button>
+				<button type="submit" class="btn btn-primary">Guardar Personal</button>
 			</div>
 			<input type="hidden" th:field="*{id}">
 
