--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarBoleto.html
@@ -72,7 +72,7 @@
 				</tr>
 			</tbody>
 		</table>
-	<a th:href="@{/boleto/form}" class="btn btn-secondary">crear unidad</a>
+	<a th:href="@{/boleto/form}" class="btn btn-secondary">Crear Unidad</a>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
 		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
