--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formBoleto.html
@@ -107,7 +107,7 @@
 			<div class="m-3"></div>
 			
 			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar unidad</button>
+				<button type="submit" class="btn btn-primary">Guardar Unidad</button>
 			</div>
 			<input type="hidden" th:field="*{id}">
 			
