--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
@@ -65,7 +65,7 @@
 			<div class="m-3"></div>
 			
 			<div class="text-center p">
-				<button type="submit" class="btn btn-primary">Guardar ruta</button>
+				<button type="submit" class="btn btn-primary">Guardar Ruta</button>
 			</div>
 			<input type="hidden" th:field="*{id}">
 			
