--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -61,14 +61,36 @@
 			<div class="form-group row">
 				<label class="col-form-label col-sm-4">Dia</label>
 				<div class="col-sm-8">
-					<input type="number" th:field="*{dia}" class="form-control" required>
+					<select th:field="*{dia}" class="form-control">
+           				<option th:value="Lunes" th:text="Lunes">Lunes</option>
+						<option th:value="Martes" th:text="Martes">Martes</option>
+						<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
+						<option th:value="Jueves" th:text="Jueves">Jueves</option>
+						<option th:value="Viernes" th:text="Viernes">Viernes</option>
+						<option th:value="Sabado" th:text="Sabado">Sabado</option>
+						<option th:value="Domingo" th:text="Domingo">Domingo</option>
+					</select>
+
 				</div>
 			</div>
 			<div class="m-3"></div>
 			<div class="form-group row">
 				<label class="col-form-label col-sm-4">Mes</label>
 				<div class="col-sm-8">
-					<input type="text" th:field="*{mes}" class="form-control" required>
+					<select th:field="*{mes}" class="form-control">
+           				<option th:value="Enero" th:text="Enero">Enero</option>
+						<option th:value="Febrero" th:text="Febrero">Febrero</option>
+						<option th:value="Marzo" th:text="Marzo">Marzo</option>
+						<option th:value="Abril" th:text="Abril">Abril</option>
+						<option th:value="Mayo" th:text="Mayo">Mayo</option>
+						<option th:value="Junio" th:text="Junio">Junio</option>
+						<option th:value="Julio" th:text="Julio">Julio</option>
+						<option th:value="Agosto" th:text="Agosto">Agosto</option>
+						<option th:value="Septiembre" th:text="Septiembre">Septiembre</option>
+						<option th:value="Octubre" th:text="Octubre">Octubre</option>
+						<option th:value="Noviembre" th:text="Noviembre">Noviembre</option>
+						<option th:value="Diciembre" th:text="Diciembre">Diciembre</option>
+					</select>
 				</div>
 			</div>
 			<div class="m-3"></div>
