--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
@@ -61,9 +61,9 @@
 			<div class="form-group row">
 				<label class="col-form-label col-sm-4">Estado de la unidad </label>
 				<div class="col-sm-8">
-					<select name="estado">
-						<option value="value1">Operativo</option>
-						<option value="value2" selected>En reparacion</option>
+					<select th:field="*{estadoActividad}" class="form-control">
+           				<option th:value="ACTIVO" th:text="Activo">Activo</option>
+						<option th:value="INACTIVO" th:text="Inactivo">Inactivo</option>
 					</select>
 				</div>
 			</div>
