--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUsuario.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUsuario.html
@@ -72,7 +72,10 @@
 			<div class="form-group row">
 				<label class="col-form-label col-sm-4">Estado Actividad</label>
 				<div class="col-sm-8">
-					<input type="text" th:field="*{estadoActividad}" class="form-control" required>
+					<select th:field="*{estadoActividad}" class="form-control">
+           				<option th:value="ACTIVO" th:text="Activo">Activo</option>
+						<option th:value="INACTIVO" th:text="Inactivo">Inactivo</option>
+					</select>
 				</div>
 			</div>
 			<div class="m-3"></div>
