--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formUnidad.html
@@ -24,8 +24,10 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Cooperativa</label>
 						<div class="col-sm-8">
-							<input type="text" th:field="*{cooperativa}" class="form-control"
-								required>
+							<select th:field="*{cooperativa.id}" class="form-control">
+								<option th:each="cooperativa : ${cooperativas}" th:value="${cooperativa.id}"
+									th:text="${cooperativa.nombre}"></option>
+							</select>
 						</div>
 					</div>
 
@@ -51,13 +53,28 @@
 						</div>
 					</div>
 					<div class="m-3"></div>
-
+<div class="m-3"></div>
+                    <!-- Mensaje de error -->
+                    <div class="text-center p">
+                        <div th:if="${mensaje}" class="alert alert-danger" role="alert">
+                            <span th:text="${mensaje}"></span>
+                        </div>
+                    </div>
+<div class="m-3"></div>
+<div class="form-group row">
+    <label class="col-form-label col-sm-4">Stock de boletos</label>
+    <div class="col-sm-8">
+        <!-- Utilizamos la directiva th:value para establecer el valor predeterminado en 1 (true) -->
+        <input type="checkbox" th:field="*{stockBoletos}" checked >
+    </div>
+</div>
+<div class="m-3"></div>
 					<div class="text-center p">
 						<button type="submit" class="btn btn-secondary">Guardar
 							Unidad</button>
 					</div>
 					<input type="hidden" th:field="*{id}">
-
+                 
 				</form>
 
 			</div>
