--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
@@ -25,11 +25,15 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item"><a class="nav-link"
+							th:href="${'/cooperativa/listar'}">Cooperativas</a></li>
+						<li class="nav-item"><a class="nav-link"
 							th:href="${'/unidad/listar'}">Unidades</a></li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="${'/ruta/listar'}">Rutas</a></li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="${'/cronograma/listar'}">Cronogramas</a></li>
+							<li class="nav-item"><a class="nav-link"
+							th:href="${'/personal/listar'}">Personal</a></li>
 					</ul>
 				</div>
 			</div>
