--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCooperativa.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCooperativa.html
@@ -8,7 +8,7 @@
 			Bienvenido <span sec:authentication="principal.username"></span>
 		</h4>
 		<h4>
-			Puede editar sus unidades,rutas y cronogramas de la app
+			Puede editar sus cooperativas,unidades,rutas y cronogramas de la app
 		</h4>
 		 <div class="m-3"></div>
 	<header th:replace="layout/layout :: header"></header>
@@ -24,32 +24,24 @@
 						<tr>
 						<tr>
 							<th class="bg-dark text-white">id</th>
-							<th class="bg-dark text-white">numero</th>
-							<th class="bg-dark text-white">cooperativa</th>
-							<th class="bg-dark text-white">estado_actividad</th>
-							<th class="bg-dark text-white">cantidad de asientos</th>
-							<th class="bg-dark text-white">stock_boletos</th>
+							<th class="bg-dark text-white">nombre</th>
 							<th class="bg-dark text-white">editar</th>
 							<th class="bg-dark text-white">eliminar</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="unidad: ${unidades}">
-							<td th:text="${unidad.id}"></td>
-							<td th:text="${unidad.numero}"></td>
-							<td th:text="${unidad.cooperativa.nombre}"></td>
-							<td th:text="${unidad.estadoActividad}"></td>
-							<td th:text="${unidad.cantidadAsientos}"></td>
-							<td th:text="${unidad.stockBoletos}"></td>
+						<tr th:each="cooperativa: ${cooperativas}">
+							<td th:text="${cooperativa.id}"></td>
+							<td th:text="${cooperativa.nombre}"></td>
 							<td><a class="btn btn-secondary btn-xs"
-								th:href="@{/unidad/form/}+ ${unidad.id}">editar</a></td>
+								th:href="@{/cooperativa/form/}+ ${cooperativa.id}">editar</a></td>
 							<td><a class="btn btn-danger btn-xs"
-								th:href="@{/unidad/eliminar/}+ ${unidad.id}">eliminar</a></td>
+								th:href="@{/cooperativa/eliminar/}+ ${cooperativa.id}">eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
-				<a th:href="@{/unidad/form}" class="btn btn-secondary">Crear
-					Unidad</a>
+				<a th:href="@{/cooperativa/form}" class="btn btn-secondary">Crear
+					Cooperativa</a>
 			</div>
 		</div>
 	</div>
