--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -17,9 +17,11 @@
 					<div class="m-3"></div>
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Fecha</label>
-						<div class="col-sm-8">
-							<input type="date" th:field="*{fecha}" class="form-control" required>
-						</div>
+							<div class="col-sm-8">
+								<input type="date" th:field="*{fecha}" id="fechaInput" class="form-control" onchange="llenarCamposFecha()"
+									required>
+							</div>
+					
 					</div>
 
 					<div class="m-3"></div>
@@ -34,7 +36,7 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Dia</label>
 						<div class="col-sm-8">
-							<select th:field="*{dia}" class="form-control">
+							<select id="diaSelect" th:field="*{dia}" class="form-control">
 								<option th:value="Lunes" th:text="Lunes">Lunes</option>
 								<option th:value="Martes" th:text="Martes">Martes</option>
 								<option th:value="Miercoles" th:text="Miercoles">Miercoles</option>
@@ -50,7 +52,7 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Mes</label>
 						<div class="col-sm-8">
-							<select th:field="*{mes}" class="form-control">
+							<select id="mesSelect" th:field="*{mes}" class="form-control">
 								<option th:value="Enero" th:text="Enero">Enero</option>
 								<option th:value="Febrero" th:text="Febrero">Febrero</option>
 								<option th:value="Marzo" th:text="Marzo">Marzo</option>
@@ -70,7 +72,7 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Año</label>
 						<div class="col-sm-8">
-							<input type="number" th:field="*{anio}" class="form-control" required>
+							<input id="anioInput" type="number" th:field="*{anio}" class="form-control" required>
 						</div>
 					</div>
 					<!-- Campo oculto para el ID de la unidad -->
@@ -124,6 +126,30 @@
 			</div>
 		</div>
 	</div>
+	<script>
+    function llenarCamposFecha() {
+        var fechaSeleccionada = document.getElementById('fechaInput').value;
+        var fecha = new Date(fechaSeleccionada);
+        
+        var dia = obtenerDia(fecha);
+        var mes = obtenerMes(fecha);
+        var anio = fecha.getFullYear();
+        
+        document.getElementById('diaSelect').value = dia;
+        document.getElementById('mesSelect').value = mes;
+        document.getElementById('anioInput').value = anio;
+    }
+
+    function obtenerDia(fecha) {
+        const diasSemana = ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'];
+        return diasSemana[fecha.getDay()];
+    }
+
+    function obtenerMes(fecha) {
+        const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
+        return meses[fecha.getMonth()];
+    }
+</script>
 	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 
