Actualizacion: Vista asientos
vista de asientos

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
@@ -68,7 +68,8 @@
         
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-success">Ver detalles</a>
+                <a class="btn btn-secondary btn-xs"
+								th:href="@{/asientos/}+ ${resultado[7]}">Ver asientos</a>
             </div>
         </div>
     </div>
