--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
@@ -34,7 +34,9 @@
 							th:href="${'/cronograma/listar'}">Cronogramas</a></li>
 							<li class="nav-item"><a class="nav-link"
 							th:href="${'/personal/listar'}">Personal</a></li>
-						<li class="nav-item"><a href="/logout">Cerrar sesión</a></li>
+								<li class="nav-item"><a class="nav-link"
+							href="/logout">Cerrar sesión</a></li>
+						
 					</ul>
 				</div>
 			</div>
