--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
@@ -10,7 +10,40 @@
 
 <body>
 
-	
+	<header th:fragment="header">
+
+		<nav class="navbar navbar-expand-lg bg-body-tertiary"
+			data-bs-theme="dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" th:href="${'/'}">Buses</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+						<li class="nav-item"><a class="nav-link"
+							th:href="${'/pasajero/boleto'}">Mis boletos</a></li>
+						<li class="nav-item"><a class="nav-link"
+							href="/logout">Cerrar sesión</a></li>
+				
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="alert alert-success" th:if="${success != null}"
+			th:text=${success}></div>
+		<div class="alert alert-danger" th:if="${error != null}"
+			th:text=${error}></div>
+		<div class="alert alert-warning" th:if="${warning != null}"
+			th:text=${warning}></div>
+		<div class="alert alert-info" th:if="${info != null}" th:text=${info}></div>
+		
+		
+	</header>
+
 
       <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
@@ -19,6 +52,9 @@
 	</header>
 	 <h4>
 			Bienvenido <span sec:authentication="principal.username"></span>
+		</h4>
+		<h4>
+			id <span th:text="${id}"></span>
 		</h4>
 		<li class="nav-item"><a href="/logout">Cerrar sesión</a></li>
 		
