--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
@@ -55,6 +55,7 @@
 							<th class="bg-dark text-white">hora</th>
 							<th class="bg-dark text-white">metodo de pago</th>
 							<th class="bg-dark text-white">total pagado</th>
+							<th class="bg-dark text-white">VER QR</th>
 							<th class="bg-dark text-white">CANCELAR</th>
 						</tr>
 					</thead>
@@ -67,6 +68,9 @@
 							<td th:text="${boleto.cronograma.horaSalida}"></td>
 							<td th:text="${boleto.metodoPago}"></td>
 							<td th:text="${boleto.totalPago}"></td>
+							<td><a class="btn btn-secondary btn-xs"
+								th:href="@{/ver/boleto(id=${boleto.id})}">VER QR</a></td>
+							
 							<td><a class="btn btn-secondary btn-xs"
 								th:href="@{/cancelar/boleto/}+ ${boleto.id}+ '/'+ ${boleto.asiento.id}">CANCELAR BOLETO</a></td>
 							
