--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
@@ -99,7 +99,7 @@
                                  
                                    <input type="hidden" id="idsAsientosSeleccionados" name="idsAsientosSeleccionados" />
                   <button type="submit" class="btn btn-secondary" onclick="guardarAsientos()">
-                    Aceptar reserva
+                    Realizar reserva (Efectivo)
                 </button>
                                 </form>
                                 </div>
