--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCro.html
@@ -18,9 +18,9 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Fecha</label>
 							<div class="col-sm-8">
-								<input type="date" th:field="*{fecha}" id="fechaInput" class="form-control" onchange="llenarCamposFecha()"
-									required>
-							</div>
+        <input type="date" th:field="*{fecha}" id="fechaInput" class="form-control" onchange="llenarCamposFecha()" min="<?php echo date('Y-m-d'); ?>"
+            required>
+    </div>
 					
 					</div>
 
@@ -80,7 +80,7 @@
 					<div class="form-group row">
 						<label class="col-form-label col-sm-4">Hora de salida</label>
 						<div class="col-sm-8">
-							<input type="time" th:field="*{horaSalida}" class="form-control" required>
+							<input type="time" th:field="*{horaSalida}" class="form-control" onchange="validarHora()" required>
 						</div>
 					</div>
 
@@ -148,7 +148,28 @@
     function obtenerMes(fecha) {
         const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
         return meses[fecha.getMonth()];
+        }
+        // Obtener la fecha actual en formato YYYY-MM-DD
+       
+    var today = new Date().toISOString().split('T')[0];
+    document.getElementById("fechaInput").setAttribute("min", today);
+    
+      function validarHora() {
+        var horaInput = document.querySelector('input[type="time"]');
+        var horaActual = new Date();
+        var hora = horaActual.getHours();
+        var minutos = horaActual.getMinutes();
+
+        // Ajustar para que siempre sea al menos una hora después
+        if (minutos < 60) {
+            minutos = '00';
+            hora += 1;
+        }
+
+        var horaMinima = hora.toString().padStart(2, '0') + ':' + minutos.toString().padStart(2, '0');
+        horaInput.setAttribute('min', horaMinima);
     }
+    
 </script>
 	<footer th:replace="layout/layout :: footer"></footer>
 </body>
