--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
@@ -234,8 +234,11 @@
                                 </form>
                                 </div>
                                 </center>
-
+<center>
 <div class="m-3"></div>
+
+
+
  <center><div  th:each="dato: ${datos}">
 	<form th:action="@{'/asientos/cancelarReserva/' + ${dato[6]}}" method="post">
                                  
