--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
@@ -107,6 +107,14 @@
                                 
                                 <div class="m-3"></div>
 	<div class="m-3"></div>
+	
+	<!-- Botón para pagar con tarjeta -->
+ <center><div>
+    <form th:action="@{/payment}" method="get">
+        <button type="submit" class="btn btn-dark btn-block btn-lg">Checkout</button>
+    </form>
+    </div>
+</center>
  <center><div  th:each="dato: ${datos}">
 	<form th:action="@{'/asientos/cancelarReserva/' + ${dato[6]}}" method="post">
                                  
