--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/registro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/registro.html
@@ -42,7 +42,7 @@
 			<div class="col-md-6 col-md-offset-3">
 				<div th:if=${param.exito}>
 					<div class="alert alert-info">Se ha registrado exitosamente a
-						la aplicación</div>
+						la aplicación. Revise su enlace de verificacion para continuar</div>
 				</div>
 
 				<h1>Regístrate</h1>
