--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+																																																																								<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="head">
@@ -22,8 +22,8 @@
 					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
+					<div class="collapse navbar-collapse" id="navbarNav">								
+						<ul class="navbar-nav">
 						<li class="nav-item"><a class="nav-link"
 							th:href="${'/cooperativa/listar'}">Cooperativas</a></li>
 						<li class="nav-item"><a class="nav-link"
@@ -34,6 +34,7 @@
 							th:href="${'/cronograma/listar'}">Cronogramas</a></li>
 							<li class="nav-item"><a class="nav-link"
 							th:href="${'/personal/listar'}">Personal</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{'/configuracion/listar'}">Configuracion</a></li>
 								<li class="nav-item"><a class="nav-link"
 							href="/logout">Cerrar sesión</a></li>
 						
