--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<title>Inicio de sesión</title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet"
+	<title>Login Form</title>
+	<link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
@@ -14,103 +13,125 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
 	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	crossorigin="anonymous">
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f2f2f2;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			margin: 0;
+		}
+		.container {
+			background-color: #fff;
+			padding: 150px;
+			box-shadow: 0 0 10px rgba(0,0,0,0.1);
+			border-radius: 5px;
+			background-size: 140%;
+		}
+		.container h2 {
+			text-align: center;
+			margin-bottom: 20px;
+		}
+		.container form {
+			display: flex;
+			flex-direction: column;
+		}
+		.container label {
+			margin-bottom: 5px;
+		}
+		.container input[type="email"], .container input[type="password"] {
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			margin-bottom: 10px;
+		}
+		.container input[type="submit"] {
+			background-color: #0042A4;
+			color: #fff;
+			padding: 10px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			margin-top: 10px;
+		}
+		.container input[type="submit"]:hover {
+			background-color: #0042A4;
+		}
+		.bus-image {
+  width: 40%; /* Adjust the width as needed */
+  height: auto;
+  margin-right: 2rem; /* Add some margin between the image and the login container */
+}
+.bus {
+  width: 40%; /* Adjust the width as needed */
+  height: auto;
+  margin-right: 2rem; /* Add some margin between the image and the login container */
+}
+		.container a {
+			text-align: center;
+			display: block;
+			margin-top: 10px;
+			color: #0042A4;
+			text-decoration: none;
+		}
+		.container a:hover {
+			text-decoration: underline;
+		}
+		.bus {
+			margin-right: 100%;
+		}
+	</style>
 </head>
 <body>
-
-
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-					aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registro y
-					inicio de sesión</a>
-			</div>
-		</div>
-	</nav>
-
-	<br>
-	<br>
-
 	<div class="container">
+		
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<h1>Inicio de sesión</h1>
-				<form th:action="@{/login}" method="post">
-<div th:if="${param.error}">
-    <div class="alert alert-danger" >
+				
+		<h2>Inicio de sesión</h2>
+		<form th:action="@{/login}" method="post">
+			
+			<div th:if="${param.error}">
+    	<div class="alert alert-danger" >
         Usuario o contraseña invalido
-    </div>
-   
-</div>
+    	</div>
+    	
+    	
+    	</div>
 					<div th:if="${param.error2}">
     <div class="alert alert-danger" >
                Por favor, confirma tu correo electrónico para iniciar sesión.
     </div>
 </div>
-			
 
 
-					<div th:if=${param.logout}>
+	<div th:if=${param.logout}>
 						<div class="alert alert-info">Ha cerrado sesión exitosamente
 						</div>
 					</div>
+					
+			
 
-
-					<div class="form-group">
-						<label  for="username">Nombre de
-							usuario : </label> <input id="username"  name="username" type="text" class="form-control"
-							required autofocus="autofocus" placeholder="Digite su email ID">
-					</div>
-
-					<div class="form-group">
-						<label  for="password">Password : </label> <input
-							id="password" type="password"  name="password" class="form-control" required
-							autofocus="autofocus" placeholder="Digite su password">
-					</div>
-
-					<div class="form-group">
-						<div class="row">
-							<div class="col-md-6 col-md-offset-3">
-								<input type="submit" class="form-control btn btn-primary" name="login-submit" id="login-submit"
-									value="Iniciar sesión" />
-							</div>
-						</div>
-					</div>
-				</form>
-				<div class="form-group">
-					<span>Si eres nuevo usuario <a th:href="@{/registro}">regístrate
-							aqui</a></span>
-				</div>
-
-			</div>
-		</div>
+							
+			<label for="username">Correo electrónico:</label>
+			<input type="email" name= "username" id="username" placeholder="Digite su email">
+			<label for="password">Contraseña:</label>
+			<input type="password" id="password" name="password" placeholder="Digite su contraseña" required>
+			<a th:href="@{/registro}">¿Es un nuevo usuario? </a>
+			<a href="#">¿Olvidó su contraseña?</a>
+			<input type="submit" name="login-submit" id="login-submit" value="Iniciar sesión">
+		</form>
+		
 	</div>
+	
+	
+          
+</body>
 
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script
+<script
 		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
-</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
